# Mixar_assignment

./: CMakeLists.txt  NodeImageProcessor.pro  README.md
resources/icons/: resources.qrc
src/: GraphManager.cpp  GraphManager.h  MainWindow.cpp  MainWindow.h  NodeCanvas.cpp  NodeCanvas.h  PropertyPanel.cpp  PropertyPanel.h  main.cpp
src/connections/: Connection.cpp  Connection.h  NodeConnector.cpp  NodeConnector.h
src/nodes/: BlendNode.cpp  BlendNode.h  BlurNode.cpp  BlurNode.h  BrightnessContrastNode.cpp  BrightnessContrastNode.h  ChannelSplitterNode.cpp  ChannelSplitterNode.h  EdgeDetectionNode.cpp  EdgeDetectionNode.h  InputNode.cpp  InputNode.h  Node.cpp  Node.h  NoiseGenerationNode.h  OutputNode.cpp  OutputNode.h  ThresholdNode.cpp  ThresholdNode.h
